<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".RatingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fruit_rating"/>
        <ImageView android:id="@+id/fruit_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/fruits"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="170dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apple" />

        <RatingBar
            android:id="@+id/apple_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="227dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banane" />

        <RatingBar
            android:id="@+id/banana_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="285dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grape" />

        <RatingBar
            android:id="@+id/grape_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="344dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lemon" />

        <RatingBar
            android:id="@+id/lemon_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="402dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strawberry" />

        <RatingBar
            android:id="@+id/strawberry_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="460dp">
        <Button
            android:id="@+id/fruit_revalidateRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revalidate_btn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>